Some changes for ASPLOS'23

--- a/SC2022/evaluation.tex
+++ b/SC2022/evaluation.tex
@@ -89,6 +89,7 @@ Compiler & GCC-7.5.0 & GCC-8.3.0 \\ \hline
 %The number of threads of all benchmarks were adjusted according how many cores and nodes in the target machine to make threads could be properly distributed over the nodes and cores, making the number of threads as close as the number of cores. Mostly, thread number was 40 in the Machine A and 128 in the Machine B, and I will give the specific number below if it is not this default value. 
 
 The performance results are shown in Fig.~\ref{fig:perf1} and Fig.~\ref{fig:perf2}, where the runtime of each allocator is normalized to that of Linux's default one. \NM{} is configured without the interleaved heap support for most applications, except for \texttt{fluidanimate} and \texttt{streamcluster}. As evaluated in Section~\ref{sec:interleavedheap}, the interleaved heap will significantly improve the performance for these two applications. 
+\todo{Let's remove the interleaved heap support from everywhere}
 %As further discussed in Section~\ref{sec:interleavedheap}, the interleaved heap may have a harmful performance impact for the serial phases, as it turns some local accesses to remote ones. %Therefore, the data of \texttt{canneal} and \texttt{raytrace} are collected without the interleaved heap. 
 %We believe that this option is acceptable, since users could determine easily whether they should disable the interleaved heap: if an application has a large portion in the serial phase, then the interleaved heap should be disabled. 
 %The impact of the interleaved heap is further discussed and evaluated in Section~\ref{sec:interleavedheap}. 
