--- a/SC2022/numalloc.tex
+++ b/SC2022/numalloc.tex
@@ -38,7 +38,8 @@
 
 \newcommand{\cmark}{\ding{51}}%
 \newcommand{\xmark}{\ding{55}}%
-\newcommand{\NEW}[1]{{\color{blue}\bfseries #1}}
+%\newcommand{\NEW}[1]{{\color{blue}\bfseries #1}}
+\newcommand{\NEW}{ }
 \newcommand{\todo}[1]{{\color{red}\bfseries [[#1]]}}
 \newcommand{\toconfirm}[1]{{\color{blue}\bfseries #1}}
 \newcommand{\TP}[1]{{\color{red}\bfseries [[#1]]}}
