--- a/SC2022/intro.tex
+++ b/SC2022/intro.tex
@@ -2,59 +2,29 @@
 \section{Introduction}
 \label{sec:intro}
 
-%The Non-Uniform Memory Access (NUMA) architecture is a scalable hardware design. Compared to Uniform Memory Access (UMA) architecture, the NUMA architecture avoids the bottleneck of using one memory controller, where each processor (or node interchangeably) can access its own memory controller concurrently in theory. However, it is extremely challenging to achieve the expected scalability for multithreaded applications. One notorious issue is caused by remote accesses that a task accesses the memory located in a remote node, which hurts the application performance since the latency of remote accesses is much higher than that of local accesses~\cite{Blagodurov:2011:CNC:2002181.2002182}. In addition to that, node imbalance may actually introduce the congestion of memory controllers or interconnection ~\cite{Blagodurov:2011:CNC:2002181.2002182}. Therefore, it is critical to reducing remote accesses or node imbalance for multithreaded applications. Although programmers could employ the assistance of different profiling tools to fix NUMA performance issues within applications~\cite{Intel:VTune, Memphis, Lachaize:2012:MMP:2342821.2342826, XuNuma, NumaMMA, 7847070, NumaPerf}, they cannot fix NUMA performance issues caused by a memory allocator.
-%For instance, the latency of remote accesses is typically double to that of local accesses. 
-Non-Uniform Memory Access (NUMA) is the de-facto design for all modern hardware in order to address the scalability issues of increasing hardware cores. 
-%Effectively supporting NUMA architecture is becoming increasingly important as the number of cores and depth of memory hierarchies are increasing recently.
-%\todo{I think previous "de-facto design" is better, "Effectively supporting" is more suitable putting afterwards}
-In NUMA architecture, each processor (or node interchangeably) has its own memory, allowing multiple threads to access the memory concurrently. However, it is challenging to achieve the expected scalability. One notorious performance issue is caused by remote accesses that a task accesses the memory of a remote node \NEW{called remote memory},  since the latency of remote accesses is much higher than that of local accesses~\cite{Blagodurov:2011:CNC:2002181.2002182}. 
-%In addition to that, node imbalance may actually introduce the congestion of memory controllers or interconnection ~\cite{Blagodurov:2011:CNC:2002181.2002182}. Therefore, it is critical to reducing remote accesses or node imbalance for multithreaded applications. 
-Although programmers may employ profiling tools to identify NUMA issues of applications~\cite{Intel:VTune, Memphis, Lachaize:2012:MMP:2342821.2342826, XuNuma, NumaMMA, 7847070, NumaPerf}, they cannot fix the performance issues caused by a memory allocator.
+
+Non-Uniform Memory Access (NUMA) is the de-facto design for modern many-core machines in order to address the scalability issues of increasing hardware cores. In NUMA architecture, each processor (or node/socket interchangeably) has its own memory, allowing threads running on different nodes accessing their own memory concurrently. Unfortunately, it is challenging to achieve the expected scalability. One notorious performance issue is caused by remote accesses that a task accesses the memory of a remote node (called remote memory),  since a remote access has much higher than accessing the memory from the local node (or a local access)~\cite{Blagodurov:2011:CNC:2002181.2002182}. Although many profiling tools are proposed to identify NUMA issues of applications~\cite{Intel:VTune, Memphis, Lachaize:2012:MMP:2342821.2342826, XuNuma, NumaMMA, 7847070, NumaPerf}, they only focus on issues inside a memory object, while still requires memory allocators to ensure the locality of memory allocations/deallocations. 
 
 % Based on this guide https://libraryguides.vu.edu.au/ieeereferencing/gettingstarted#s-lg-box-wrapper-9930413, it's acceptable
 % \todo{The IEEE seems to have multiple references separately but I am not used to it. Double check it.}
 
-General-purpose memory allocators, such as dlmalloc~\cite{dlmalloc},  Hoard~\cite{Hoard}, TCMalloc~\cite{tcmalloc}, jemalloc~\cite{jemalloc}, SuperMalloc~\cite{supermalloc}, and  Scalloc~\cite{Scalloc}, were designed for symmetric multiprocessing machines. As a result, they cannot achieve good performance for NUMA architecture, based on existing work~\cite{tcmallocnuma, yang2019jarena} and our evaluation. There exist some NUMA-aware allocators~\cite{tcmallocnuma, tcmalloc2, kim2013node, yang2019jarena, mimalloc}. In particular, Kaminski built the first NUMA-aware memory allocator on top of TCMalloc in 2008~\cite{tcmallocnuma}, called \TN{} in the remainder of this paper. \TN{} adds a freelist  and a page-span for each NUMA node so that threads can allocate objects from its per-node list/page-span. To reduce remote accesses, \TN{} allocates the physical memory of each page-span from the same node as the current thread, where mimalloc~\cite{mimalloc} and recent NUMA support of TCMalloc~\cite{tcmalloc2}
-follow a similar idea. \NEW{Compared to \TN{}, mimalloc~\cite{mimalloc} does its best to allocate memory on the local node but it is not guaranteed. TCMalloc~\cite{tcmalloc2} duplicates the page allocator for each NUMA node, thus allocating the physical memory from the local node and preventing memory being reused by a remote thread.} 
-% TCMalloc~\cite{tcmalloc2} introduces a concept called NUMA partitions, which is typically equal to the number of NUMA nodes. They duplicate the page allocator for each NUMA partition, thus allocating the physical memory from the local node and preventing freed memory being reused by a remote thread.
-However, \textit{none of these allocators achieve the full locality of memory allocations}, as they did not handle memory deallocations and thread migrations well: (1)  freed objects can be placed into the free lists (holding freed objects) \NEW{located} in \NEW{the} remote \NEW{memory}, 
-%the deallocating thread's local buffer, 
-which will violate the locality;
-%if this object is originally allocated from a remote node; 
-(2) A thread migration will turn all local accesses of this thread to remote ones, introducing  remote accesses. Further, existing allocators cannot exploit huge pages that are prevalent in modern hardware. Instead, \NM{} overcomes these issues as follows. 
+In order to reduce remote accesses, some NUMA-aware allocators~\cite{tcmallocnuma, kim2013node, yang2019jarena} have been proposed in the past. Kaminski built the first NUMA-aware memory allocator on top of TCMalloc in 2008~\cite{tcmallocnuma}, called \TN{} in the remainder of this paper, where \TN{} designs are integrated into the modern TCMalloc~\cite{tcmalloc2} based on our analysis. \TN{} adds a free-list and page-span for each NUMA node, and bindsthe physical memory of each page-span to the physical node, so that a thread can allocate objects from the per-node list/page-span that it is running on. However, this design cannot ensure the locality when an object is always be returned to the deallocating thread's heap, a common design shared by most allocators to reduce the synchronization overhead~\cite{Hoard}. 
+%These designs are also borrowed by general-purpose allocators for their NUMA support, such as TCMalloc~\cite{tcmalloc2} and mimalloc~\cite{mimalloc}. 
+%\todo{Similarly, TCMalloc designs a page allocator for each NUMA node so that a thread is allocating the physical memory from the page node.}
+mimalloc~\cite{mimalloc} proposes a  (e.g., 64K) free-list that is typically allocated by a single thread, and all objects from the same page (even deallocated by other threads) will be returned back to the same per-page free-list, which could alleviate the above-mentioned problem.   
 
-% \todo{Adding more description about existing work. }
 
-First, \NM{} proposes a \textbf{binding-based memory management} to exploit the benefits of both memory and thread binding. In particular, \NM{} binds every region of virtual memory and every thread to a physical node, but still allows the OS to perform the scheduling. 
-%enabling it to identify the physical node of each memory address and each thread inside user space. 
-The bindings enable \NM{} to obtain the origin (the physical node) of memory and threads with few instructions inside the user space, which is orders of magnitude lower than invoking system calls (around  $10,000$ cycles for getting the node of the memory). Therefore, it is infeasible to perform more advanced memory management, as the performance benefits of reducing remote accesses will be canceled out by the cost of getting the origin information via system calls.
-%without the binding, where the performance benefits of reducing remote accesses will be canceled out by the cost of getting the origin information.  
-%providing a strong foundation for \NM{}'s advanced memory management. 
-Further, the binding will eliminate remote accesses caused by thread migrations as discussed above, and ensure the locality for managing metadata.  Note that \textit{\NM{}'s novelty does not lie in its first uses of memory binding and thread binding}, since existing allocators~\cite{tcmallocnuma, mimalloc} have used memory binding and some systems~\cite{li2013numa, XuNuma, Lepers:2015:TMP:2813767.2813788} also proposed thread binding to improve the performance for NUMA applications. \NEW{However, if these bindings are ignorant to the memory allocator, then the allocator cannot exploit the benefits of these bindings. \NM{} is the first allocator that implements and exploits both memory and threading binding together in order to ensure the full locality of memory allocations and use huge pages} as further discussed in the following. 
-%
-% if the binding is outside the allocator, then   
-%Currently, \NM{} supports two types of thread binding, and user-customized thread binding. 
-%Without thread binding, these allocators cannot ensure the full locality, since thread migration from one node to another will turn all local accesses of this thread into remote ones.
-% Based on our understanding, these allocators cannot ensure the full locality due to no thread binding: thread migration from one node to another will turn all local accesses of this thread into remote ones; 
-% On the other hand, it is very expensive to identify whether an object is allocated from the same node as the thread, where a possible solution is to bind the memory address to a fixed node. \todo{?} 
-%On the other hand, identifying whether an object is allocated from the same node as a thread is very expensive, 
-% which requires an efficient way to determine which node the current thread is running on and the physical node of a memory address.
-%and one possible solution is to bind the memory address to a fixed node. \todo{Show we can compute it based on memory address, maybe not since we say it in the implementation part} In this way, a thread can easily find the node that allocated the object upon deallocation, making origin-aware memory management possible.
-%Compared to external binding from the application side, intrinsic binding within the allocator provides some additional benefits: (1) all metadata can be allocated locally to reduce remote access. (2) the allocator can identify the locations of threads with few instructions, without the need of expensive system calls, enabling origin-aware memory management and the sharing of huge pages.
-% Instead, the proposed work \textit{will exploit the binding to improve its memory management} as follows: (1) the allocator can identify the locations of threads with few instructions, without the need of invoking expensive system calls, enabling origin-aware memory management and the sharing of huge pages. (2) all metadata can be allocated in the local node based on the binding, which could reduce remote accesses. 
-%Overall, \NM{} is built on top of these bindings to perform its efficient memory management.
-%Note that \NM{}'s thread binding does not exclude the OS scheduling, as it only binds threads to the NUMA node, but not a specific core. Section~\ref{sec:limit} further discusses its design trade-off.  
+However, \textit{none of existing allocators achieves the full locality of memory allocations}, as they did not handle un-expected thread migrations. A thread migration will turn all local accesses of this thread to remote ones, introducing remote accesses. Further,  existing allocators do not exploit the location relationship between threads and memory. In order to address these issues, we propose a novel allocator, \NM{}, with the following novel contributions.  
 
-%still allows users to customize the binding via the configuration file or environment variable, but
 
-%the proposed work still allows users to customize the binding via the configuration file or environment variable, but \textit{will exploit the binding to improve its memory management} as follows: 
-%, helping eliminate unnecessary remote accesses caused by thread migrations. A thread's migration will turn all its previously-local accesses into remote ones, and therefore can significantly degrade the performance.
+First, \NM{} proposes a \textbf{binding-based memory management} that also binds threads to physical nodes , in addition to memory binding, with multiple benefits: (1) the bindings enable \NM{} to obtain the origin (the physical node) of memory and threads with few instructions inside the user space, without the need of invoking system calls (around  $10,000$ cycles for getting the node of the memory), enabling more advanced memory management as discussed below; %Therefore, it is infeasible to perform more advanced memory management, as the performance benefits of reducing remote accesses will be canceled out by the cost of getting the origin information via system calls.
+(2) The thread binding eliminates remote accesses caused by the above-mentioned thread migrations, but it does not exclude OS-based scheduling since it only binds threads to nodes; (3) The thread binding reduces the locality issues of heap metadata, such as free lists of managing per-thread heap, which could be always placed on the node of a running thread. Although past systems~\cite{li2013numa, XuNuma, Lepers:2015:TMP:2813767.2813788} exploit thread binding before to improve the performance of NUMA applications, \NM{} is the first allocator that implements and exploits both memory and threading binding together inside the memory allocator. 
 
-%The thread binding allows \NM{} to check each node's origin quickly. Further,  the virtual address space of the heap is divided into multiple blocks, where each block is bound to a physical node, allowing to track each object's origin by the address's range. \NM{} also ensures the origin-based allocation that always allocate an object from the same node (physically) as the request thread, combining the above-mentioned mechanisms altogether to ensure the locality of allocations. 
-
-Second, \NM{} ensures the full locality of memory allocations with its \textbf{origin-aware memory management},  built on top of its binding-based mechanism. Memory locality is defined as
-whether an object is allocated from the local physical node of the requesting thread. \NEW{Most} existing NUMA-aware allocators only ensure the locality of every object’s first memory allocation~\cite{tcmallocnuma, tcmalloc, yang2019jarena}. Additionally, \NM{} ensures the locality of all freed objects, eliminating the confusion caused by memory reuse (a very common behavior). Different from existing work, \NM{} guarantees that a freed object will be always placed into a freelist with the same origin as the current thread. That is, an object is returned to the deallocating thread \textit{only if} the object is originated from the same node that the current thread is running on; otherwise, it will be returned to its original node. 
-Note that \NM{}'s origin-aware mechanism is different from mimalloc~\cite{mimalloc} or snmalloc~\cite{Snmalloc} \NEW{which determines one deallocation is remote from thread granularity and each deallocation should always return to the allocating thread's freelist, regardless of whether those threads are running on the same node. Such design guarantees the locality of deallocation, but at the cost of higher contention of each thread's freelist.}
+Second, \NM{} ensures the full locality of memory allocations with its \textbf{origin-aware memory management}, due to its binding-based mechanism. \NM{} ensures that all heap objects are allocated from the local physical node of the allocating thread by handling deallocations of freed objects additionally. 
+%As mentioned before, existing allocators at best ensures the locality of every object’s first memory allocation~\cite{tcmallocnuma, tcmalloc, yang2019jarena}. Additionally, 
+%\NM{} ensures the locality of all freed objects, eliminating the confusion caused by memory reuse (a very common behavior). Different from existing work,
+\NM{} guarantees that a freed object will be always placed into a freelist with the same origin as the current thread. That is, an object is returned to the deallocating thread \textit{only if} the object is originated from the same node that the current thread is running on; otherwise, it will be returned to its original node.  Note that \NM{}'s origin-aware mechanism is different from mimalloc~\cite{mimalloc} or snmalloc~\cite{Snmalloc}. 
+%which determines one deallocation is remote from thread granularity and each deallocation should always return to the allocating thread's freelist, regardless of whether those threads are running on the same node. Such design guarantees the locality of deallocation, but at the cost of higher contention of each thread's freelist.
 
 % simply return freed objects to their original free lists, which is easier to achieve. \NEW{mimalloc considers the locality of deallocation, but it's done from thread level, which makes the threads running on the same node complete for the lock.}
 
