--- a/ASPLOS2023/discussion.tex
+++ b/ASPLOS2023/discussion.tex
@@ -5,12 +5,12 @@ This section describes some limitations of \NM{}. First, \NM{} may consume more 
 %As shown in Figure~\ref{fig:remoteAccess}, \NM{} significantly reduces the number of TLB misses by trading with medium memory consumption. 
 
 
-Second, \NM{}'s interleaved heap cannot always achieve performance improvement due to the following reason. Although the interleaved heap may avoid memory controller congestion caused by concurrent accesses from multiple child threads, it introduces unnecessary overhead for the initial thread since it is forced to have some remote accesses. 
+% Second, \NM{}'s interleaved heap cannot always achieve performance improvement due to the following reason. Although the interleaved heap may avoid memory controller congestion caused by concurrent accesses from multiple child threads, it introduces unnecessary overhead for the initial thread since it is forced to have some remote accesses. 
 %(2) Although \NM{} avoids the change of programs to utilize the interleaved heap, it imposes additional overhead to identify the callsites for potentially shared objects. 
-Therefore, users should decide whether to enable the interleaved heap or not. However, this is an easy task, since the interleaved heap may have a harmful impact when the serial phase is a big portion of the execution. Therefore, we think that this shortcoming is totally acceptable given its predictability. 
+% Therefore, users should decide whether to enable the interleaved heap or not. However, this is an easy task, since the interleaved heap may have a harmful impact when the serial phase is a big portion of the execution. Therefore, we think that this shortcoming is totally acceptable given its predictability. 
 
 % \NM{} is built based on the thread binding 
-\NEW{NUMAlloc is designed with explicit thread binding}, where people may worry about its conflict with the OS scheduler. In fact, based on our understanding, this should not be a big issue due to the following reasons. First, \NM{}'s thread binding does not exclude OS's scheduling, as it only binds a thread to a node. Second, \NM{} allows users to adjust the binding flexibly, although currently \NM{} only supports node-interleaved and node-saturate binding. But adding more flexible binding will be just pure engineering effort. Third, the thread binding is even suitable for server applications with thousands of threads, as \NM{}'s binding balances the workload among different physical nodes. 
+Second, NUMAlloc is designed with explicit thread binding, where people may worry about its conflict with the OS scheduler. In fact, based on our understanding, this should not be a big issue due to the following reasons. (1) \NM{}'s thread binding does not exclude OS's scheduling, as it only binds a thread to a node. (2) \NM{} allows users to adjust the binding flexibly, although currently \NM{} only supports node-interleaved and node-saturate binding. But adding more flexible binding will be just pure engineering effort. (3) The thread binding is even suitable for server applications with thousands of threads, as \NM{}'s binding balances the workload among different physical nodes. 
 %Based on our analysis, the memory consumption is caused by \NM{}'s bag mechanism, especially with transparent huge page support. Currently, \NM{} employs one MB as a bag, which indicates that objects of each size will occupy at least of 1 MB, when transparent huge page support is enabled. Further, \NM{}'s design achieves a fast lookup on the metadata, but will utilize more memory unfortunately. We will investigate whether reducing the size of a bag could help reduce the memory consumption in the future.
 
 %The second limitation is that \NM{} will crash less often by preallocating a huge chunk of memory from the OS in the beginning. If an invalid reference is landed within a pre-allocated range, a program will not crash, different from other allocators. Instead, \NM{} aims to achieve the high performance over the reliability. Therefore, we believe that this limitation is acceptable.  
